# BotFaz2077

./: .env  .env_example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  docker-compose.yml  docker-compose.yml.example  sqlx-data.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md  bug_report.md  feature-request.md  feature_request.md
.github/workflows/: cd.yml  ci.yml  deploy.yml  main.yml  pull_request.yml  push.yml  release.yml  security_audit.yml  weekly_checks.yml
migrations/: 20210327145849_initial_migration.sql  20210328152115_initial_migration.sql  20210328203000_initial_migration.sql  20210401195625_initial_migration.sql  20210407191108_add_guilds_table.sql
src/: main.rs
src/commands/: anime.rs  fun.rs  general.rs  mod.rs  owner.rs  owners.rs
src/commands/anime/: baka.rs  cry.rs  cuddle.rs  feed.rs  hug.rs  kiss.rs  laugh.rs  lick.rs  mod.rs  pat.rs  poke.rs  slap.rs  smug.rs  tickle.rs
src/commands/economy/: daily.rs  gamble.rs  mod.rs
src/commands/fun/: crypto.rs  mod.rs  urban.rs
src/commands/general/: avatar.rs  mod.rs  ping.rs  profile.rs  top.rs
src/commands/owners/: botavatar.rs  mod.rs  shutdown.rs  uptime.rs  version.rs
src/commands/transformice/: mod.rs  player.rs  tribe.rs
src/listeners/: mod.rs
src/listeners/events/: message.rs  mod.rs  ready.rs  resume.rs
src/listeners/handlers/: event_handler.rs
src/listeners/hooks/: before.rs  mod.rs
src/models/bot/: command_groups.rs  commands.rs  config.rs  data.rs  mod.rs
src/models/database/: user.rs
src/structures/: client_data.rs  commands.rs  mod.rs
src/utilities/: help.rs
