[package]
name = "botfaz2077"
version = "0.1.0"
authors = ["DarthFaz2077"]
edition = "2018"
description = "Simple Bot for Discord."
readme = "README.md"
repository = "https://github.com/DarthFaz2077/BotFaz2077"
license = "MIT"
keywords = ["bot", "discord", "docker", "serenity"]

[dependencies]
base64 = "0.13.0"
blake3 = "0.3.7"
chrono = "0.4.19"
envy = "0.4.2"
humantime = "2.1.0"
reqwest = { version = "0.11.3", features = ["json"] }
serde = { version = "1.0.125", features = ["derive"] }
serenity = "0.10.5"
tokio = { version = "1.5.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.25"
tracing-futures = "0.2.5"
tracing-subscriber = "0.2.17"

[dependencies.sqlx]
version = "0.5.1"
default-features = false
features = [
    "chrono",
    "macros",
    "migrate",
    "offline",
    "postgres",
    "runtime-tokio-rustls",
]
