[package]
name = "botfaz2077"
version = "0.1.0"
authors = ["DarthFaz2077"]
edition = "2018"
description = "Simple Bot for Discord."
readme = "README.md"
repository = "https://github.com/DarthFaz2077/BotFaz2077"
license = "MIT"
keywords = ["bot", "discord", "docker", "serenity"]
build = "build.rs"

[dependencies]
base64 = "0.13.0"
chrono = "0.4.19"
envy = "0.4.2"
humantime = "2.1.0"
rand = "0.8.3"
reqwest = { version = "0.11.3", features = ["json"] }
resvg = "0.14.1"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
serenity = "0.10.7"
tiny-skia = "0.5.1"
tokio = { version = "1.6.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.25"
tracing-futures = "0.2.5"
tracing-subscriber = "0.2.17"
urlencoding = "1.3.3"
usvg = "0.14.1"

[dependencies.sqlx]
version = "0.5.5"
default-features = false
features = [
    "chrono",
    "macros",
    "migrate",
    "offline",
    "postgres",
    "runtime-tokio-rustls",
]

[build-dependencies.vergen]
version = "5.1.8"
default-features = false
features = ["git"]
